fix  page context

--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -101,8 +101,9 @@
         min-height: 664px;
         height: 664px;
         position: relative;
-        left: 50%;
-        margin-left: -200px;
+        left:50px;
+        // left: 50%;
+       // margin-left: -200px;
         top: 80px;
         .canvas {
           position: relative;
