--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="../assets/xiao.jpg" rel="shortcut icon" type="image/vnd.microsoft.icon">
+    <link href="xiao.png" rel="shortcut icon" type="image/vnd.microsoft.icon"> 
+    <!-- <link href="../assets/xiao.png" rel="shortcut icon" type="image/vnd.microsoft.icon"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H5编辑器</title>
     <!-- <meta name="robots" content="noindex, nofollow"> -->
