--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -97,6 +97,8 @@
         left: 0;
       }
       .canvasBox {
+        // margin:0;
+        // padding: 0;
         width: 375px;
         min-height: 664px;
         height: 664px;
