--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -109,8 +109,10 @@
         top: 50px;
         .canvas {
           //  position: relative;
-          width: 375px;
-          min-height: 664px;
+          //  width: 375px;
+          //   min-height: 664px;
+          margin: 0;
+          padding: 0;
           background-color: #fff;
           box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.2);
           position: absolute;
