editor page sourcebox add scorll

--- a/src/pages/editor/index.less
+++ b/src/pages/editor/index.less
@@ -86,7 +86,8 @@ body,
       }
     }
     .tickMark {
-      overflow: hidden;
+      // overflow: hidden;
+      overflow: auto;
       height: 100%;
       position: relative;
       flex: 1;
